--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ flutter:
   assets:
      - images/pic.png
      - images/pic2.png
+     - images/1.png
+     - images/2.png
+     - images/3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
